<resources>
    <string name="app_name">My Application</string>
    <string name="main_text">Tetris</string>
    <string name="high_score_def">High score: </string>
    <string name="new_game">New Game</string>
    <string name="reset">reset</string>
    <string name="exit">exit</string>
    <string name="current_score">current score</string>
    <string name="high_score">High Score</string>
    <string name="restart">restart</string>
</resources>